--- a/Views/Login/CreateAccount.cshtml
+++ b/Views/Login/CreateAccount.cshtml
@@ -13,11 +13,11 @@
 
                 <div class="col-md-6">
                     <label for="inputEmail4" class="form-label">Email</label>
-                    <input type="email" name="email" class="form-control" id="inputEmail4">
+                    <input type="email" name="Email" class="form-control" id="inputEmail4">
                 </div>
                 <div class="col-md-6">
                     <label for="inputPassword4" class="form-label">Password</label>
-                    <input type="password" name="password" class="form-control" id="inputPassword4">
+                    <input type="password" name="Password" class="form-control" id="inputPassword4">
                 </div>
 
 
